# CMakeStudy

./: README.md
v1/: CMakeLists.txt
v2/: CMakeLists.txt
v3/: CMakeLists.txt
v3/include/: head.h
v4/: CMakeLists.txt  main.cpp
v5/: CMakeLists.txt  main.cpp
v5/src2/: add.cpp
v6/calc/: CMakeLists.txt
v6/include/: sort_algorithms.h
v6/sort/: CMakeLists.txt  quick_sort.cpp
v6/test1/: CMakeLists.txt  calc.cpp
v6/test2/: CMakeLists.txt
v7/: CMakeLists.txt
v7/calc/: CMakeLists.txt  add.cpp  div.cpp
v7/include/: calc.h
v7/sort/: CMakeLists.txt  bubble_sort.cpp  insertion_sort.cpp  sort.cpp
v8/: CMakeLists.txt  main.cpp
v8/lib/: CMakeLists copy.txt
v8/src/: div.cpp
